Fix in Github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Run flake8
       run: flake8
     - name: Run Mypy
-      run: mypy people segmentation
+      run: mypy people_segmentation
     - name: tests
       run: |
        pip install .[tests]
