--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-addict
-catalyst
-imagecorruptions
-joblib
-jpeg4py
-numpy
-opencv-python
-pandas
-Pillow
-scikit-image
-scikit-learn
-scipy
+albumentations
+iglovikov_helper_functions
+pytorch_lightning
+pytorch_toolbelt
 torch
+tqdm
