--- a/people_segmentation/configs/2020-09-24a.yaml
+++ b/people_segmentation/configs/2020-09-24a.yaml
@@ -2,7 +2,7 @@
 seed: 1984
 
 num_workers: 4
-experiment_name: "2020-09-23a"
+experiment_name: "2020-09-24a"
 
 train_datasets:
   - coco
@@ -17,7 +17,7 @@ val_datasets:
   - supervisely
 
 model:
-  type: segmentation_models_pytorch.Unet
+  type: segmentation_models_pytorch.FPN
   encoder_name: timm-efficientnet-b3
   classes: 1
   encoder_weights: noisy-student
@@ -43,12 +43,12 @@ scheduler:
   T_mult: 2
 
 train_parameters:
-  batch_size: 8
+  batch_size: 6
 #  epoch_length: 110000 # almost equal to the train sets: coco + vistas + matting + pascal voc
 
 checkpoint_callback:
   type: pytorch_lightning.callbacks.ModelCheckpoint
-  filepath: "2020-09-23a"
+  filepath: "2020-09-24a"
   monitor: val_loss
   verbose: True
   mode: min
@@ -58,9 +58,9 @@ val_parameters:
   batch_size: 2
 
 optimizer:
-  type: torch.optim.AdamW
+  type: adamp.AdamP
   lr: 0.0001
-  weight_decay: 0.0003
+
 
 train_aug:
   transform:
@@ -120,30 +120,6 @@ val_aug:
         border_mode: 0 # cv2.BORDER_CONSTANT
         value: 0
         mask_value: 0
-        p: 1
-      - __class_fullname__: albumentations.augmentations.transforms.Normalize
-        always_apply: false
-        max_pixel_value: 255.0
-        mean:
-          - 0.485
-          - 0.456
-          - 0.406
-        p: 1
-        std:
-          - 0.229
-          - 0.224
-          - 0.225
-
-test_aug:
-  transform:
-    __class_fullname__: albumentations.core.composition.Compose
-    bbox_params: null
-    keypoint_params: null
-    p: 1
-    transforms:
-      - __class_fullname__: albumentations.augmentations.transforms.LongestMaxSize
-        always_apply: False
-        max_size: 800
         p: 1
       - __class_fullname__: albumentations.augmentations.transforms.Normalize
         always_apply: false
