--- a/people_segmentation/configs/2020-09-25.yaml
+++ b/people_segmentation/configs/2020-09-25.yaml
@@ -2,12 +2,12 @@
 seed: 1984
 
 num_workers: 4
-experiment_name: "2020-09-23a"
+experiment_name: "2020-09-25"
 
 train_datasets:
   - coco
   - pascal_voc
-#  - vistas
+  - vistas
   - matting_humans
 
 val_datasets:
@@ -48,7 +48,7 @@ train_parameters:
 
 checkpoint_callback:
   type: pytorch_lightning.callbacks.ModelCheckpoint
-  filepath: "2020-09-23a"
+  filepath: "2020-09-25"
   monitor: val_loss
   verbose: True
   mode: min
@@ -58,9 +58,9 @@ val_parameters:
   batch_size: 2
 
 optimizer:
-  type: torch.optim.AdamW
+  type: adamp.AdamP
   lr: 0.0001
-  weight_decay: 0.0003
+
 
 train_aug:
   transform:
@@ -120,30 +120,6 @@ val_aug:
         border_mode: 0 # cv2.BORDER_CONSTANT
         value: 0
         mask_value: 0
-        p: 1
-      - __class_fullname__: albumentations.augmentations.transforms.Normalize
-        always_apply: false
-        max_pixel_value: 255.0
-        mean:
-          - 0.485
-          - 0.456
-          - 0.406
-        p: 1
-        std:
-          - 0.229
-          - 0.224
-          - 0.225
-
-test_aug:
-  transform:
-    __class_fullname__: albumentations.core.composition.Compose
-    bbox_params: null
-    keypoint_params: null
-    p: 1
-    transforms:
-      - __class_fullname__: albumentations.augmentations.transforms.LongestMaxSize
-        always_apply: False
-        max_size: 800
         p: 1
       - __class_fullname__: albumentations.augmentations.transforms.Normalize
         always_apply: false
